--- a/Extrat_SharePrice _Data.ipynb
+++ b/Extrat_SharePrice _Data.ipynb
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "import yfinance as yf\n",
-    "import pandas as pd"
+    "!import pandas as pd"
    ]
   },
   {
