--- a/Extrat_SharePrice _Data.ipynb
+++ b/Extrat_SharePrice _Data.ipynb
@@ -55,7 +55,7 @@
    ],
    "source": [
     "!pip install yfinance==0.1.67\n",
-    #"!pip install pandas==1.3.3"
+    "#!pip install pandas==1.3.3"
    ]
   },
   {
